# uvic-api-proxy

./: pyproject.toml
app/: banner.py  kuali.py  main.py
app/schemas/: kuali.py
