
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Aomi Jokoji", email = "aomijokoji@gmail.com"},
]
dependencies = [
    "litestar==2.0.0beta2",
    "uvicorn[standard]>=0.22.0",
    "aiohttp>=3.8.4",
    "pydantic>=1.10.11",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
]
